# Model-Deployment-And-Inference

./: CMakeLists.txt  README.md  Readme.ipynb  Readme.txt  main_crnn.cpp  main_dbnet.cpp  main_modelservice.cpp  main_modelservice_virtual.cpp  main_virtual_crnn.cpp  main_virtual_yolov5.cpp  main_yolo.cpp  model_service_opt_config.txt  requirement.txt
.ipynb_checkpoints/: Readme-checkpoint.ipynb
Include/Crnn/: Crnn.h  Crnn2.h  Utils_crnn.h
Include/DBnet/: DBnet.h
Include/ModelService/: ModelService.h  ModelService_virtual.h
Include/Net_Creator/: Net_Creator.h
Include/Utils/: Net_Detect.h  Tools.h
Include/Yolov5/: Utils_yolo.h  Yolov5.h  yolov5_virtual.h
Src/Crnn/: Crnn.cpp  Crnn2.cpp  Utils.cpp
Src/DBnet/: DBnet.cpp
Src/Utils/: Tools.cpp
Src/Yolov5/: Utils.cpp  Yolov5.cpp  yolov5_virtual.cpp
crnnmobile/: CRNN_Recognize.py  Untitled.ipynb  crnn2onnx.py  dataset.py  detect.py  key.txt  keys_sythtext.py  utils.py
crnnmobile/models/: Untitled.ipynb  crnn.py  crnn_bk.py  crnn_mobilev3.py  crnn_mobilev3_repvgg.py  crnn_repvgg.py  rec_mobilev3.py  rec_mobilev3_repvgg.py  repvgg.py  repvggblock.py  resnet_v.py  resnet_v_o.py  resnet_v_v.py
int8_Calibration/mtzimg/: best-mtz_sim.table  imageslist.txt  说明.txt
int8_Calibration/mtzimg/labels/: 19961680696.txt  20210203102546.txt  rBww4l1vmJ-AFnS8AAHQDK-Wp30551.txt
int8_Calibration/sfzimg/: id_crnn_mobile_fix_sim_fp32.table
ncnn-20220420/examples/: CMakeLists.txt  bank_pro_dbnet_crnn.cpp  bank_pro_dbnet_crnn_transparent.cpp  best_ID.cpp  best_ID_sim_int8.param  cece_id.cpp  ceshimao.cpp  crnn_ID.cpp  finished.cpp  imgIDRec_jiaofu.cpp  imgIDReco.cpp  sift_main.cpp  yolov5.cpp
ncnn-20220420/examples/include/: hello.h  operation.h  yolov5.h
ncnn-20220420/examples/src/: hello.cpp  operation.cpp  yolov5.cpp
ncnn-20220420/examples/yolov5_include/: yolov5.h
ncnn-20220420/src/: CMakeLists.txt
ncnn-20220420/src/layer/: yolov5focus.cpp  yolov5focus.h
onnx2ncnn/: ncnn2int8.sh  ncnn2table.sh  ncnnoptimize_fp16.sh  ncnnoptimize_fp32.sh  onnx2ncnn.sh
onnx2ncnn_model/: 说明.txt
onnx2ncnn_model/crnn_sfz/: id_crnn_mobile_fix_sim.param  id_crnn_mobile_fix_sim_fp16.param  id_crnn_mobile_fix_sim_int8.param
onnx2ncnn_model/dbnet_bankcard/: dbnet_mobile_dynamic.param  dbnet_mobile_dynamic_fp16.param
onnx2ncnn_model/yolo_mtz/: best-mtz_sim.param  best-mtz_sim_fp16.param  best-mtz_sim_int8.param
torch_onnx/: config_torch2onn.yaml  export_torch2onnx.py
torch_onnx/crnn_export/: export_crnn.py  test_crnn_onnx.ipynb
torch_onnx/dbnet_export/: export_dbnet.py  test_dbnet_onnx.ipynb
torch_onnx/dbnet_export/.ipynb_checkpoints/: test_dbnet_onnx-checkpoint.ipynb
torch_onnx/onnx_models/crnn/: 说明.txt
torch_onnx/onnx_models/dbnet/: dbnet_mobile_dynamic.onnx  dbnet_mobile_static.onnx  dbnet_mobile_static_sim.onnx
torch_onnx/onnx_models/yolov5/: Untitled.ipynb  best-lite_static_no_grid_sim.onnx  说明.txt
torch_onnx/onnx_models/yolov5/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
torch_onnx/yolo_export/: export.py  test_yolov5s_onnx.ipynb  text_onnx_yolov5.py  说明.txt
torch_onnx/yolo_export/.ipynb_checkpoints/: test_yolov5s_onnx-checkpoint.ipynb
